<resources>
    <string name="app_name">Marvel Characters</string>

    <string name="no_internet_connection_text">It seems you are offline. Please retry again or swipe from top when connected"</string>
    <string name="error_fetching_characters_text">Sorry but an error happened when loading characters</string>
    <string name="empty_characters_view_text">No characters found</string>
    <string name="retry_loading_action_text">Retry</string>

    <string name="character_detail_featured_comics_text">Comics</string>
    <string name="character_detail_featured_events_text">Events</string>
    <string name="character_detail_featured_stories_text">Stories</string>
    <string name="character_detail_featured_series_text">Series</string>
    <string name="character_detail_additional_resources_title_text">Additional Web Resources</string>
    <string name="character_detail_additional_resources_detail_info_text">More details</string>
    <string name="character_detail_additional_resources_wiki_text">Wiki</string>
    <string name="character_detail_additional_resources_comiclink_text">See featured comics</string>
</resources>